[package]
name = "eoltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cfg-if = "1.0.0"
indoc = "2.0.1"
instekgpp = { version = "0.1.0", path = "../instekgpp" }
serialport = "4.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
