[package]
name = "eoltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
indoc = "2.0.1"
instekgpp = { version = "0.1.0", path = "../instekgpp" }
serialport = "4.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

eol-shared = { path = "../eol-shared" }
thiserror = "1.0.40"
cfg-if = "1.0.0"
serde_json = "1.0.96"
clap = { version = "4.2.4", features = ["derive"] }
serde = "1.0.160"
chrono = "0.4.24"
