[package]
name = "ccmn_eol_fw"
edition = "2021"
version = "0.1.0"

[lib]
path = "src/lib.rs"
name = "ccmn_eol_fw"
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[build-dependencies]
bindgen = "0.65.0"
dotenv = "0.15.0"

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["native"] }
git-version = "0.3.5"
paste = "1.0.12"
static_assertions = "1.1.0"

[patch.crates-io]
# issue with lstat patch; will file esp-idf-sys issue, use my patch for now:
esp-idf-sys = { git = "https://github.com/dmezh/esp-idf-sys", rev = "f3c1ff5" }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.0.1" # NOTE: keep in sync with pio platform-espressif32 idf version
esp_idf_components = ["driver"] # speeds up build; add more components as needed

[profile.dev]
opt-level = 1

[profile.release]
debug = true

