[workspace]
members = ["src/dut", "src/tester", "src/shared"]
resolver = "1"

[patch.crates-io]
# issue with lstat patch; will file esp-idf-sys issue, use my patch for now:
esp-idf-sys = { git = "https://github.com/dmezh/esp-idf-sys", rev = "f3c1ff5" }

[profile.dev]
opt-level = 1

[profile.release]
debug = true
