[package]
name = "ccmn_eol_shared"
edition = "2021"
version = "0.1.0"

[lib]
path = "lib.rs"
name = "ccmn_eol_shared"
edition = "2021"
required-features = []

[build-dependencies]
bindgen = "0.65.0"
dotenv = "0.15.0"

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["native"] }
git-version = "0.3.5"
paste = "1.0.12"
static_assertions = "1.1.0"
