[package]
name = "ccmn_eol_tester_fw"
edition = "2021"
version = "0.1.0"

[lib]
path = "lib.rs"
name = "ccmn_eol_tester_fw"
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[build-dependencies]
bindgen = "0.65.0"
dotenv = "0.15.0"

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["native"] }
git-version = "0.3.5"
paste = "1.0.12"
static_assertions = "1.1.0"

ccmn_eol_shared = { path = "../shared" }
anyhow = "1.0.70"

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.0.1" # NOTE: keep in sync with pio platform-espressif32 idf version
esp_idf_components = ["driver"] # speeds up build; add more components as needed

